--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
@@ -27,6 +28,7 @@
         "mongoose": "^5.9.11",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "nodemailer": "^6.4.14",
         "sharp": "^0.26.2",
         "xss-clean": "^0.1.1"
     },
